Add object validation

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-com.service.usermanagement.validation.gender_string.GenderValidator.message = "Gender value must be MALE or FEMALE"
-com.service.usermanagement.validation.date.DateValidator.message = "Date format must be {dateFormat}"
+com.service.usermanagement.validation.gender_string.GenderValidator.message = must be MALE or FEMALE
+com.service.usermanagement.validation.date.DateValidator.message = must be {dateFormat}
