--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,12 @@ buildscript {
 	}
 }
 
-plugins {
-	id 'com.palantir.docker' version '0.19.2'
-}
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.palantir.docker'
+apply plugin: "com.palantir.docker-compose"
 
 group = 'com.service'
 version = '0.0.1-SNAPSHOT'
@@ -54,10 +51,10 @@ dependencies {
 	compile("io.springfox:springfox-swagger-ui:2.7.0")
 
 	//view health, status, info,... (for service discovery)
-	compile("org.springframework.boot:spring-boot-starter-actuator")
+//	compile("org.springframework.boot:spring-boot-starter-actuator")
 
 	//eureka client
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+//	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 
 	compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
