--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.datasource.url=jdbc:mysql://35.185.179.159:3306/user_management_database?
 spring.datasource.username=test
 spring.datasource.password=Chiennv@99
 
+#spring.datasource.url=jdbc:mysql://192.168.99.100:3308/user_management_database?useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
+#spring.datasource.username=root
+#spring.datasource.password=1111
+
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#spring.rabbitmq.host=mustang.rmq.cloudamqp.com
+#spring.rabbitmq.virtual-host=nthmgsth
+#spring.rabbitmq.username=nthmgsth
+#spring.rabbitmq.password=bnIhHklsf1jkGwdbXog1I0-kP9X4K4vI
