--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ sourceCompatibility = 1.8
 
 docker {
 	dependsOn build
-	name "${project.group}/${bootJar.baseName}"
+	name "${bootJar.baseName}:gradle-plugin"
 	files bootJar.archivePath
 	buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
 }
