--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://35.185.179.159:3306/user_management_database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
-#spring.datasource.username=test
-#spring.datasource.password=Chiennv@99
-
-#spring.datasource.url=jdbc:mysql://192.168.99.100:3308/user_management_database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
-#spring.datasource.username=root
-#spring.datasource.password=1111
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management_database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=1111
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
