--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 
 	//eureka client
-//	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 
 	compile("org.springframework.boot:spring-boot-starter-amqp")
 
