--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
+management.endpoints.web.exposure.include=*
+management.metrics.enable.jwm=true
+
+info.app.name=User management service
+info.build.version=0.0.1-SNAPSHOT
+info.java-vendor=${java.specification.vendor}
+
 #spring.rabbitmq.host=mustang.rmq.cloudamqp.com
 #spring.rabbitmq.virtual-host=nthmgsth
 #spring.rabbitmq.username=nthmgsth
