--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_management_database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management_database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=1111
 fakedata=false
@@ -13,8 +13,11 @@ logging.level.org.hibernate=ERROR
 
 management.endpoints.web.exposure.include=*
 management.metrics.enable.jwm=true
+management.endpoint.health.show-details=always
+management.endpoint.logfile.enabled=true
 
 info.app.name=User management service
+info.app.datasource=${spring.datasource.url}
 info.build.version=0.0.1-SNAPSHOT
 info.java-vendor=${java.specification.vendor}
 
