--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,14 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.palantir.docker'
-apply plugin: "com.palantir.docker-compose"
 
 group = 'com.service'
 version = '0.0.1-SNAPSHOT'
-processResources {
-	expand(project.properties)
-}
 sourceCompatibility = 1.8
 
 docker {
 	dependsOn build
-	name "${bootJar.baseName}:gradle-plugin"
+	name "${bootJar.baseName}:latest"
 	files bootJar.archivePath
 	buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
 }
