--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ management.metrics.enable.jwm=true
 management.endpoint.health.show-details=always
 management.endpoint.logfile.enabled=true
 
-#info.app.name=User management service
-#info.app.datasource=${spring.datasource.url}
-#info.build.version=0.0.1-SNAPSHOT
-#info.java-vendor=${java.specification.vendor}
+info.app.name=User management service
+info.app.datasource=${spring.datasource.url}
+info.build.version=0.0.1-SNAPSHOT
+info.java-vendor=${java.specification.vendor}
 
 #spring.rabbitmq.host=mustang.rmq.cloudamqp.com
 #spring.rabbitmq.virtual-host=nthmgsth
