--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.19.2"
+		classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
 	}
 }
 
@@ -19,6 +20,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.palantir.docker'
+apply plugin: "io.spring.dependency-management"
 
 group = 'com.service'
 version = '0.0.1-SNAPSHOT'
@@ -36,6 +38,9 @@ repositories {
 	maven {
 		url 'https://repo.spring.io/libs-milestone'
 	}
+	maven {
+		url 'https://repo.spring.io/libs-snapshot'
+	}
 }
 
 dependencies {
@@ -52,6 +57,10 @@ dependencies {
 	//actuator
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 
+	//consul
+	compile('org.springframework.cloud:spring-cloud-starter-consul-all')
+	compile('org.springframework.cloud:spring-cloud-starter-consul-config')
+
 	compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
@@ -61,6 +70,9 @@ ext {
 }
 
 dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-consul-dependencies:2.0.1.BUILD-SNAPSHOT"
+	}
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
