--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,17 @@ info.java-vendor=${java.specification.vendor}
 #spring.rabbitmq.virtual-host=nthmgsth
 #spring.rabbitmq.username=nthmgsth
 #spring.rabbitmq.password=bnIhHklsf1jkGwdbXog1I0-kP9X4K4vI
+
+
+
+
+spring.application.name=user-management-service
+
+server.port=8080
+
+consul.service-id=${spring.application.name}:${server.port}
+consul.url=http://localhost:8500
+consul.deregister-critical-service-after=1s
+consul.heal-check-path=/actuator/health
+consul.heal-check-interval=10s
+
